PanIndia/force-app/main/default/objects/Insurance__c/fields/Date_of_Surrendered__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Surrendered__c</fullName>
    <label>Date of Surrendered</label>
    <type>Date</type>
</CustomField>