PanIndia/force-app/main/default/objects/Insurance__c/fields/Insurance_No__c.field-meta.xml
<CustomField>
    <fullName>Insurance_No__c</fullName>
    <label>Insurance No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INS-{000}</fullName>
            </value>
            <value>
                <fullName>INS-{0001}</fullName>
            </value>
            <value>
                <fullName>INS-{002}</fullName>
            </value>
            <value>
                <fullName>INS-{003}</fullName>
            </value>
            <value>
                <fullName>INS-{004}</fullName>
            </value>
            <value>
                <fullName>INS-{005}</fullName>
            </value>
            <value>
                <fullName>INS-{006}</fullName>
            </value>
            <value>
                <fullName>INS-{007}</fullName>
            </value>
            <value>
                <fullName>INS-{008}</fullName>
            </value>
            <value>
                <fullName>INS-{009}</fullName>
            </value>
            <value>
                <fullName>INS-{010}</fullName>
            </value>
            <value>
                <fullName>INS-{011}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>