PanIndia/force-app/main/default/objects/Insurance__c/fields/Insurance_value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_value__c</fullName>
    <formula>Yearly_Premium__c * VALUE( TEXT(Insurance_Period__c)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>