PanIndia/force-app/main/default/objects/Insurance__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>