PanIndia/force-app/main/default/objects/Insurance__c/fields/Maturity_Year_for_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Year_for_Insurance__c</fullName>
    <formula>YEAR( TODAY() ) + VALUE( TEXT( Insurance_Period__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Year for Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>