PanIndia/force-app/main/default/objects/Insurance__c/fields/Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Sub_Types__c</fullName>
    <label>Sub Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Insurance_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term plan</fullName>
            </value>
            <value>
                <fullName>Unit Linked Insurance plan</fullName>
            </value>
            <value>
                <fullName>Third party Insurance</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>