PanIndia/force-app/main/default/objects/Insurance__c/fields/Yearly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Premium__c</fullName>
    <formula>IF(ISPICKVAL(Sub_Types__c ,&apos;Term plan&apos;),100,
IF(ISPICKVAL(Sub_Types__c ,&apos;Unit Linked Insurance plan&apos;),130,
IF(ISPICKVAL(Sub_Types__c ,&apos;Third party Insurance&apos;),75,
IF(ISPICKVAL(Sub_Types__c ,&apos;Fire&apos;),50,NULL ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>