PanIndia/force-app/main/default/objects/Insurance__c/validationRules/Rule_for_Insurance_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_for_Insurance_Policy</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &apos;Surrendered&apos;),ISPICKVAL( Status__c , &apos;Claimed&apos; ), ISCHANGED(Status__c ))</errorConditionFormula>
    <errorMessage>You can not edit policy details as Policy is Surrendered or Claimed</errorMessage>
</ValidationRule>