PanIndia/force-app/main/default/objects/Insurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurer__c</columns>
    <columns>Date_of_Surrendered__c</columns>
    <columns>Insurance_No__c</columns>
    <columns>Insurance_Period__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Insurance_value__c</columns>
    <columns>Maturity_Year_for_Insurance__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Types__c</columns>
    <columns>Yearly_Premium__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>